# pijiang

./: .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml
docs/: ROADMAP.md  current-baseline-and-watcher.md  demo-visuals.md  first-success-path.md  for-ai-agents.md  index.md  invoke-real-council.md  project-philosophy.md  release-policy.md  runtime-backflow-validation.md  support-matrix.md
docs/contracts/: 20-decision-matrix.json  60-execution-contract.md  65-namespace-boundary.md  70-baseline-admission-charter.md
docs/workflows/: model-factory-parliament.md
examples/briefs/: product-strategy.md  project-parliament.md  quick-start.md  tech-architecture.md
examples/configs/: local-ollama.json  minimal-3-seat.json
pijiang/: __init__.py  obsidian.py
pijiang/cli/: main.py
pijiang/factory/: __init__.py  admission.py  analysis.py  config.py  council.py  endpoints.py  provider_worker.py  providers.py  readiness.py  registry.py  runtime_support.py  types.py  watcher.py
tests/: test_council_runtime.py  test_cpj_cli.py  test_provider_endpoints.py  test_solution_factory.py  test_workspace_paths.py
tools/: __init__.py  run_pijiang_factory.py  workspace_paths.py
tools/solution_factory/: __init__.py  bailian_probe.py  core.py
