[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pijiang"
version = "0.1.0"
description = "皮匠：一个面向复杂议题的多模型、多职责议会系统。"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
  { name = "qiuxinyuan321" }
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
cpj = "pijiang.cli.main:main"
pijiang-factory = "pijiang.cli.main:main"

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
where = ["."]
include = ["pijiang*", "tools*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
